fix(client.js): Local video z-index

--- a/public/style.css
+++ b/public/style.css
@@ -59,7 +59,7 @@ canvas {
 }
 
 #me {
-  z-index: 1;
+  z-index: 4;
 }
 
 .thumbnail{
